Fix the out-of-memory behavior so the message doesn't disappear under endwin(). Related to PR 3126.